--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -28,18 +28,43 @@ img {
         color: v.$neutralVeryDarkGrayishblue;
     }
 
-    button {
+    .button {
         position: relative;
-        background: transparent;
-        border: none;
-        box-sizing: content-box;
-        color: black;
-        display: block;
-        font-family: "Fraunces", serif;
-        font-weight: 900;
-        margin: 0 auto;
-        text-transform: uppercase;
-        width: 8rem;
+        z-index: 1;
+        button {
+            display: block;
+            position: relative;
+            background: transparent;
+            border: none;
+            box-sizing: content-box;
+            color: black;
+            display: block;
+            font-family: "Fraunces", serif;
+            font-weight: 900;
+            margin: 0 auto;
+            text-transform: uppercase;
+            width: 8rem;
+            cursor: pointer;
+
+            &::before {
+                position: absolute;
+                bottom: 0;
+                content: "";
+                display: block;
+                width: 100%;
+                height: 6px;
+                background: v.$primarySoftRed;
+                z-index: -1;
+                border-radius: v.$borderRadius;
+                opacity: 0.8;
+            }
+        }
+        .yellow {
+            &::before {
+                background: v.$primaryYellow;
+                opacity: 0.8;
+            }
+        }
     }
 }
 
