done about section

--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -100,7 +100,6 @@ img {
         flex-direction: column;
     }
 
-    img,
     .additionalPoints {
         width: 50%;
     }
@@ -116,6 +115,9 @@ img {
         display: flex;
         flex-basis: 0;
         flex: 1 1 0px;
+        img {
+            width: 50%;
+        }
     }
 
     .reversed {
