--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -4,9 +4,18 @@
     min-height: 50vh;
 }
 
-img {
-    max-width: 100%;
+.bgcImg {
     margin: 0 auto;
+    width: 100%;
+    background-position: center;
+    background-size: cover;
+}
+.transformImage {
+    background-image: url("../images/mobile/image-transform.jpg");
+}
+
+.standout {
+    background-image: url("../images/mobile/image-stand-out.jpg");
 }
 
 .about {
@@ -24,38 +33,37 @@ img {
     }
 
     p {
-        padding: 1rem 1rem;
         color: v.$neutralVeryDarkGrayishblue;
+        padding: 1rem;
     }
 
     .button {
         position: relative;
         z-index: 1;
         button {
-            display: block;
-            position: relative;
             background: transparent;
             border: none;
             box-sizing: content-box;
             color: black;
+            cursor: pointer;
             display: block;
             font-family: "Fraunces", serif;
             font-weight: 900;
             margin: 0 auto;
+            position: relative;
             text-transform: uppercase;
             width: 8rem;
-            cursor: pointer;
 
             &::before {
-                position: absolute;
+                background: v.$primarySoftRed;
+                border-radius: v.$borderRadius;
                 bottom: 0;
                 content: "";
                 display: block;
-                width: 100%;
                 height: 6px;
-                background: v.$primarySoftRed;
+                position: absolute;
+                width: 100%;
                 z-index: -1;
-                border-radius: v.$borderRadius;
             }
         }
         .yellow {
@@ -105,9 +113,10 @@ img {
     }
 
     .contentBox {
+        flex-grow: 1;
+        align-items: center;
         display: flex;
         flex-direction: column;
-        align-items: center;
         justify-content: center;
     }
 
@@ -115,13 +124,24 @@ img {
         display: flex;
         flex-basis: 0;
         flex: 1 1 0px;
-        img {
-            width: 50%;
-        }
+    }
+
+    .keypoints > * {
+        min-height: none;
     }
 
     .reversed {
         flex-direction: row-reverse;
+    }
+
+    .transformImage {
+        flex-grow: 1;
+        background-image: url("../images/desktop/image-transform.jpg");
+        background-size: cover;
+    }
+
+    .standout {
+        background-image: url("../images/desktop/image-stand-out.jpg");
     }
 
     .cherry {
