testimonials section improved

--- a/src/scss/testimonial.scss
+++ b/src/scss/testimonial.scss
@@ -1,6 +1,7 @@
 @use './variables.scss'as v;
 
 .testimonialcontainer {
+    margin-top: 1.5rem;
     padding: 1.5rem 2rem;
     text-align: center;
 
