--- a/src/scss/images.scss
+++ b/src/scss/images.scss
@@ -1,5 +1,5 @@
-@use './variables.scss'as v;
-@use './mixins.scss' as *;
+@use 'variables'as v;
+@use 'mixins' as *;
 
 .images {
     @include gridTemplate(repeat(2, 1fr), repeat(2, 1fr), "milk orangePlate" "iceCream sugarCubes");
