--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -6,6 +6,7 @@
 
 .bgcImg {
     margin: 0 auto;
+    min-height: 10rem;
     width: 100%;
     background-position: center;
     background-size: cover;
