--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -4,7 +4,7 @@
 #contact {
   padding: 2rem;
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
   min-height: 50vh;
   text-align: center;
   color: v.$neutralGrayishblue;
