after clients feedback

--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -18,6 +18,10 @@ a {
     text-decoration: none;
 }
 
+header,section{
+    min-height: 100vh;
+}
+
 @media (min-width: v.$mobile+1px) {
     .wrapper {
         max-width: v.$desktop;
