--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -1,146 +1,157 @@
 @use 'variables'as v;
 
 .keypoints > * {
-    min-height: 50vh;
+  min-height: 50vh;
 }
 
-.bgcImg {
-    margin: 0 auto;
-    min-height: 10rem;
-    width: 100%;
-    background-position: center;
-    background-size: cover;
+.keypoints {
+  display: flex;
+  flex-direction: column-reverse;
 }
+
+
+.bgcImg {
+  margin: 0 auto;
+  min-height: 10rem;
+  width: 100%;
+  background-position: center;
+  background-size: cover;
+}
+
 .transformImage {
-    background-image: url("../images/mobile/image-transform.jpg");
+  background-image: url("../images/mobile/image-transform.jpg");
 }
 
 .standout {
-    background-image: url("../images/mobile/image-stand-out.jpg");
+  background-image: url("../images/mobile/image-stand-out.jpg");
 }
 
 #about {
-    text-align: center;
+  text-align: center;
 }
 
 .contentBox {
-    padding: 2rem 0;
+
+  padding: 2rem 0;
+  position: relative;
+
+  h2 {
+    font-family: "Fraunces", serif;
+    font-size: 2rem;
+    padding: 1rem;
+  }
+
+  p {
+    color: v.$neutralVeryDarkGrayishblue;
+    padding: 1rem;
+  }
+
+  .button {
     position: relative;
+    z-index: 1;
 
-    h2 {
-        font-family: "Fraunces", serif;
-        font-size: 2rem;
-        padding: 1rem;
+    button {
+      background: transparent;
+      border: none;
+      box-sizing: content-box;
+      color: black;
+      cursor: pointer;
+      display: block;
+      font-family: "Fraunces", serif;
+      font-weight: 900;
+      margin: 0 auto;
+      position: relative;
+      text-transform: uppercase;
+      width: 8rem;
+
+      &::before {
+        background: v.$primarySoftRed;
+        border-radius: v.$borderRadius;
+        bottom: 0;
+        content: "";
+        display: block;
+        height: 6px;
+        position: absolute;
+        width: 100%;
+        z-index: -1;
+      }
     }
 
-    p {
-        color: v.$neutralVeryDarkGrayishblue;
-        padding: 1rem;
+    .yellow {
+      &::before {
+        background: v.$primaryYellow;
+      }
     }
-
-    .button {
-        position: relative;
-        z-index: 1;
-        button {
-            background: transparent;
-            border: none;
-            box-sizing: content-box;
-            color: black;
-            cursor: pointer;
-            display: block;
-            font-family: "Fraunces", serif;
-            font-weight: 900;
-            margin: 0 auto;
-            position: relative;
-            text-transform: uppercase;
-            width: 8rem;
-
-            &::before {
-                background: v.$primarySoftRed;
-                border-radius: v.$borderRadius;
-                bottom: 0;
-                content: "";
-                display: block;
-                height: 6px;
-                position: absolute;
-                width: 100%;
-                z-index: -1;
-            }
-        }
-        .yellow {
-            &::before {
-                background: v.$primaryYellow;
-            }
-        }
-    }
+  }
 }
 
 .additionalPoints {
-    min-height: 25rem;
-    position: relative;
-    background-size: cover;
+  min-height: 25rem;
+  position: relative;
+  background-size: cover;
 
-    div {
-        position: absolute;
-        bottom: 1rem;
-        left: 1rem;
-        right: 1rem;
+  div {
+    position: absolute;
+    bottom: 1rem;
+    left: 1rem;
+    right: 1rem;
 
-        h3 {
-            margin-bottom: 1rem;
-            font-size: 1.5rem;
-        }
+    h3 {
+      margin-bottom: 1rem;
+      font-size: 1.5rem;
     }
+  }
 }
 
 .cherry {
-    background-image: url("../images/mobile/image-graphic-design.jpg");
-    color: v.$primaryDarkDesaturated;
+  background-image: url("../images/mobile/image-graphic-design.jpg");
+  color: v.$primaryDarkDesaturated;
 }
+
 .orange {
-    background-image: url("../images/mobile/image-photography.jpg");
-    color: v.$primaryDarkblue;
+  background-image: url("../images/mobile/image-photography.jpg");
+  color: v.$primaryDarkblue;
 }
 
 // breakpoint
 @media (min-width: v.$mobile+1px) {
-    #about {
-        display: flex;
-        flex-direction: column;
-    }
+  #about {
+    display: flex;
+    flex-direction: column;
+  }
 
-    .additionalPoints {
-        width: 50%;
-    }
+  .additionalPoints {
+    width: 50%;
+  }
 
-    .contentBox {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        width: 100%;
-    }
+  .contentBox {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+  }
 
-    .keypoints {
-        display: flex;
-        height: 70vh;
-    }
+  .keypoints {
+    flex-direction: row;
+    min-height: 70vh;
+  }
 
-    .reversed {
-        flex-direction: row-reverse;
-    }
+  .reversed {
+    flex-direction: row-reverse;
+  }
 
-    .transformImage {
-        background-image: url("../images/desktop/image-transform.jpg");
-    }
+  .transformImage {
+    background-image: url("../images/desktop/image-transform.jpg");
+  }
 
-    .standout {
-        background-image: url("../images/desktop/image-stand-out.jpg");
-    }
+  .standout {
+    background-image: url("../images/desktop/image-stand-out.jpg");
+  }
 
-    .cherry {
-        background-image: url("../images/desktop/image-graphic-design.jpg");
-    }
-    .orange {
-        background-image: url("../images/desktop/image-photography.jpg");
-    }
+  .cherry {
+    background-image: url("../images/desktop/image-graphic-design.jpg");
+  }
+  .orange {
+    background-image: url("../images/desktop/image-photography.jpg");
+  }
 }
