--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -89,10 +89,11 @@
   min-height: 25rem;
   position: relative;
   background-size: cover;
+  background-position: center;
 
   div {
     position: absolute;
-    bottom: 1rem;
+    bottom: 2rem;
     left: 1rem;
     right: 1rem;
 
@@ -121,6 +122,7 @@
   }
 
   .additionalPoints {
+    background-position: center;
     width: 50%;
   }
 
