--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,39 +1,45 @@
 @use 'variables' as v;
 
 footer {
-    background-color: v.$primaryDarkModerateCyan;
-    height: 200px;
-    width: 100%;
+  background-color: v.$primaryDarkModerateCyan;
+  height: 200px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 
-    .footerNav {
-        margin: 0 auto;
-        padding: 20px 0;
-        text-align: center;
+  .footerNav {
+    margin: 0 auto;
+    padding: 20px 0;
+    text-align: center;
 
-        ul {
-            margin-top: 24px;
-            li {
-                display: inline;
-                padding: 0 20px;
-                transition: 0.2s;
-                a {
-                    color: v.$primaryDarkDesaturated;
-                }
+    ul {
+      margin-top: 24px;
 
-                &:hover {
-                    a {
-                        color: v.$primaryWhite;
-                    }
-                }
-            }
-        }
-    }
+      li {
+        display: inline;
+        padding: 0 20px;
+        transition: 0.2s;
 
-    .socialBar {
-        margin-top: 16px;
-        text-align: center;
         a {
-            padding: 0 8px;
+          color: v.$primaryDarkDesaturated;
         }
+
+        &:hover {
+          a {
+            color: v.$primaryWhite;
+          }
+        }
+      }
     }
+  }
+
+  .socialBar {
+    margin-top: 16px;
+    text-align: center;
+
+    a {
+      padding: 0 8px;
+    }
+  }
 }
