--- a/src/scss/testimonial.scss
+++ b/src/scss/testimonial.scss
@@ -6,10 +6,9 @@ section.testimonial {
 
 .testimonial-container {
   position: relative;
-  //margin-top: 1.5rem;
-  padding: 1.5rem 2rem;
+  padding: 0 2rem;
   text-align: center;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -34,6 +33,7 @@ section.testimonial {
   }
 
   .testimonial {
+height: 50vh;
     display: none;
     padding: 0 2rem;
   }
@@ -43,6 +43,7 @@ section.testimonial {
   }
 
   h4 {
+    margin-bottom: 2rem;
     color: v.$neutralDarkGrayishblue;
     font-family: "Fraunces", serif;
     letter-spacing: 4px;
@@ -84,14 +85,15 @@ section.testimonial {
       align-self: center;
       color: v.$neutralDarkGrayishblue;
       font-family: "Fraunces", serif;
-      font-size: 1.5rem;
-      grid-column: 1 / 4;
+      font-size: 2.5rem;
+      //grid-column: 1 / 4;
       letter-spacing: 8px;
       text-transform: uppercase;
     }
 
     .quote {
       color: v.$neutralVeryDarkGrayishblue;
+      font-size: 1.5rem;
       margin: 2rem auto;
     }
 
@@ -104,7 +106,7 @@ section.testimonial {
     }
 
     img {
-      height: 7rem;
+      height: 9rem;
     }
   }
 }
