--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -4,7 +4,7 @@
     scroll-behavior: smooth;
     box-sizing: border-box;
     font-family: "Barlow", sans-serif;
-    font-size: 18px;
+    //font-size: 18px;
     margin: 0;
     padding: 0;
 }
