--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -13,11 +13,10 @@
 }
 
 .bgcImg {
-  margin: 0 auto;
-  //min-height: 50%;
-  width: 100%;
-  background-position: center;
-  background-size: cover;
+    margin: 0 auto;
+    width: 100%;
+    background-position: center;
+    background-size: cover;
 }
 
 .transformImage {
@@ -33,9 +32,11 @@
 }
 
 .contentBox {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 
-  padding: 2rem 0;
-  //position: relative;
+    //position: relative;
 
   h2 {
     font-family: "Fraunces", serif;
@@ -45,7 +46,7 @@
 
   p {
     color: v.$neutralVeryDarkGrayishblue;
-    padding: 1rem;
+    padding: 2rem;
   }
 
   .button {
@@ -93,11 +94,11 @@
   background-size: cover;
   background-position: center;
 
-  div {
-    position: absolute;
-    bottom: 2rem;
-    left: 1rem;
-    right: 1rem;
+    div {
+        position: absolute;
+        bottom: 1rem;
+        left: 1rem;
+        right: 1rem;
 
     h3 {
       margin-bottom: 1rem;
@@ -116,7 +117,12 @@
   color: v.$primaryDarkblue;
 }
 
-// breakpoint
+//@todo height 100vh for mobile horizontal
+@media (max-width: v.$mobile+1px ),(orientation:landscape){
+
+}
+
+
 @media (min-width: v.$mobile+1px) {
   #about {
     display: flex;
@@ -135,10 +141,11 @@
     width: 100%;
   }
 
-  .keypoints {
-    flex-direction: row;
-    height: 60vh;
-  }
+    .keypoints {
+        display: flex;
+        height: 70vh;
+      flex-direction: row;
+    }
 
   .reversed {
     flex-direction: row-reverse;
@@ -146,10 +153,12 @@
 
   .transformImage {
     background-image: url("../images/desktop/image-transform.jpg");
+
   }
 
   .standout {
     background-image: url("../images/desktop/image-stand-out.jpg");
+
   }
 
   .cherry {
