--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -7,19 +7,24 @@ footer {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 
   .footerNav {
     margin: 0 auto;
     padding: 20px 0;
+    width: 300px;
     text-align: center;
 
     ul {
       margin-top: 24px;
+      text-align: center;
+      display: flex;
+      justify-content: center;
 
       li {
         display: inline;
-        padding: 0 20px;
         transition: 0.2s;
+        padding: 0 20px;
 
         a {
           color: v.$primaryDarkDesaturated;
